# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   controller.ShortLink:
     properties:
@@ -52,16 +51,7 @@ definitions:
         type: integer
     type: object
 info:
-  contact:
-    email: urlshortener-api@cedi.dev
-    name: Cedric Kienzler
-    url: cedi.dev
-  description: A url shortener, written in Go running on Kubernetes
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  title: URL Shortener
-  version: "1.0"
+  contact: {}
 paths:
   /api/v1/shortlink/:
     get:
